# MockEmailService com logger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.profiles.active=test
 #spring.profiles.active=dev
+
+default.sender=brunomarques.web@gmail.com
+default.recipient=brunomarques.web@gmail.com
