--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,15 @@
-spring.profiles.active=test
-#spring.profiles.active=dev
+#spring.profiles.active=test
+spring.profiles.active=dev
 
-default.sender=brunomarques.web@gmail.com
-default.recipient=brunomarques.web@gmail.com
+default.sender=brunomarques.java@gmail.com
+default.recipient=brunomarques.java@gmail.com
+
+spring.mail.host=smtp.gmail.com
+spring.mail.username=brunomarques.java@gmail.com
+spring.mail.password=dnmt902912
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.socketFactory.port = 465
+spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.socketFactory.fallback = false
+spring.mail.properties.mail.smtp.starttls.enable = true
+spring.mail.properties.mail.smtp.ssl.enable = true
