# Implementando o serviço de e-mail com o Google.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 #spring.profiles.active=test
 spring.profiles.active=dev
 
-default.sender=brunomarques.java@gmail.com
-default.recipient=brunomarques.java@gmail.com
+default.sender=
+default.recipient=
 
 spring.mail.host=smtp.gmail.com
-spring.mail.username=brunomarques.java@gmail.com
-spring.mail.password=dnmt902912
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.socketFactory.port = 465
 spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
